# saima_controllers

data_extraction/: CMakeLists.txt  data_extraction_plugin.xml  package.xml
data_extraction/config/: data_extraction.yaml  data_extraction_controller.yaml
data_extraction/include/: data_extraction.h  data_extraction.tpp  data_extraction_controller.h
data_extraction/launch/: data_extraction.launch
data_extraction/src/: data_extraction.cpp  data_extraction_controller.cpp
general_functionalities/: CMakeLists.txt  package.xml
general_functionalities/include/: general_functionalities.h
general_functionalities/src/: general_functionalities.cpp
identification_tests/: CMakeLists.txt  package.xml
identification_tests/launch/: identification_tests.launch  move_to_pose_test.launch
identification_tests/scripts/: identification_tests.py  move_to_pose_test.py
nullspace_admittance_controller/: CMakeLists.txt  nullspace_admittance_controller_plugin.xml  package.xml
nullspace_admittance_controller/cfg/: nullspace_admittance_controller.cfg
nullspace_admittance_controller/config/: nullspace_admittance_controller.yaml
nullspace_admittance_controller/include/: nullspace_admittance_controller.h
nullspace_admittance_controller/launch/: moveit.rviz  moveit_rviz.launch  nullspace_admittance_controller.launch
nullspace_admittance_controller/scripts/: nullspace_admittance_controller.py  usb_connection.py
nullspace_admittance_controller/src/: nullspace_admittance_controller.cpp
panda_ecat_comm/: CMakeLists.txt  package.xml
panda_ecat_comm/include/: panda_ecat_comm.h
panda_ecat_comm/src/: panda_ecat_comm.cpp
simple_admittance_controller/: CMakeLists.txt  package.xml  simple_admittance_controller_plugin.xml
simple_admittance_controller/cfg/: simple_admittance_controller.cfg
simple_admittance_controller/config/: simple_admittance_controller.yaml
simple_admittance_controller/include/: simple_admittance_controller.h
simple_admittance_controller/launch/: simple_admittance_controller.launch
simple_admittance_controller/scripts/: simple_admittance_controller.py
simple_admittance_controller/src/: simple_admittance_controller.cpp
trial_controller/: CMakeLists.txt  package.xml  trial_controller_plugin.xml
trial_controller/config/: trial_controller.yaml
trial_controller/include/: trial_controller.h
trial_controller/launch/: trial_controller.launch
trial_controller/python_open/: optimizer_1.py  optimizer_2.py  optimizer_open.py  python_trial.py
trial_controller/src/: trial_controller.cpp
trial_controller_velocity/: CMakeLists.txt  package.xml  trial_controller_velocity_plugin.xml
trial_controller_velocity/cfg/: trial_controller_velocity.cfg
trial_controller_velocity/config/: trial_controller_velocity.yaml
trial_controller_velocity/include/: trial_controller_velocity.h
trial_controller_velocity/launch/: trial_controller_velocity.launch
trial_controller_velocity/open_scripts/: optimizer1.py  optimizer2.py  optimizer3.py  optimizer4.py  optimizer5.py  optimizer6.py
trial_controller_velocity/optimizer1/: CMakeLists.txt  Cargo.toml  build.rs  example_optimizer.c  optimizer.yml  optimizer1_bindings.h  optimizer1_bindings.hpp
trial_controller_velocity/optimizer1/icasadi_optimizer1/: Cargo.toml
trial_controller_velocity/optimizer1/icasadi_optimizer1/src/: lib.rs
trial_controller_velocity/optimizer1/src/: lib.rs
trial_controller_velocity/optimizer2/: CMakeLists.txt  Cargo.toml  build.rs  example_optimizer.c  optimizer.yml  optimizer2_bindings.h  optimizer2_bindings.hpp
trial_controller_velocity/optimizer2/icasadi_optimizer2/: Cargo.toml
trial_controller_velocity/optimizer2/icasadi_optimizer2/src/: lib.rs
trial_controller_velocity/optimizer2/src/: lib.rs
trial_controller_velocity/optimizer4/: CMakeLists.txt  Cargo.toml  build.rs  example_optimizer.c  optimizer.yml  optimizer4_bindings.h  optimizer4_bindings.hpp
trial_controller_velocity/optimizer4/icasadi_optimizer4/: Cargo.toml
trial_controller_velocity/optimizer4/icasadi_optimizer4/src/: lib.rs
trial_controller_velocity/optimizer4/src/: lib.rs
trial_controller_velocity/optimizer5/: CMakeLists.txt  Cargo.toml  build.rs  example_optimizer.c  optimizer.yml  optimizer5_bindings.h  optimizer5_bindings.hpp
trial_controller_velocity/optimizer5/icasadi_optimizer5/: Cargo.toml
trial_controller_velocity/optimizer5/icasadi_optimizer5/src/: lib.rs
trial_controller_velocity/optimizer5/src/: lib.rs
trial_controller_velocity/optimizer6/: CMakeLists.txt  Cargo.toml  build.rs  example_optimizer.c  optimizer.yml  optimizer6_bindings.h  optimizer6_bindings.hpp
trial_controller_velocity/optimizer6/icasadi_optimizer6/: Cargo.toml
trial_controller_velocity/optimizer6/icasadi_optimizer6/src/: lib.rs
trial_controller_velocity/optimizer6/src/: lib.rs
trial_controller_velocity/scripts/: trial_controller_velocity.py
trial_controller_velocity/src/: trial_controller_velocity.cpp
