<?xml version="1.0"?>
<package format="2">
  <name>data_extraction</name>
  <version>0.0.0</version>
  <description>The data_extraction package</description>
  <license>TODO</license>
  <maintainer email="eugenio@todo.todo">eugenio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>franka_hw</depend>
  
  <build_depend>panda_ecat_comm</build_depend>
  <exec_depend>panda_ecat_comm</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/data_extraction_plugin.xml"/>
  </export>
</package>
