<?xml version="1.0"?>
<package format="2">
  <name>simple_admittance_controller</name>
  <version>0.0.0</version>
  <description>The simple_admittance_controller package</description>
  <license>TODO</license>
  <maintainer email="eugenio@todo.todo">eugenio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>franka_hw</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>data_extraction</depend>
  <depend>general_functionalities</depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>franka_control</exec_depend>
  
  <build_depend>panda_ecat_comm</build_depend>
  <exec_depend>panda_ecat_comm</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/simple_admittance_controller_plugin.xml"/>
  </export>
</package>
